@@ -4,28 +4,24 @@ import static android.content.Context.MODE_PRIVATE;
 import static android.widget.Toast.LENGTH_SHORT;
 import static android.widget.Toast.makeText;
 
-import android.content.Intent;
 import android.content.SharedPreferences;
 import android.os.Bundle;
-import android.os.Handler;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
-import android.widget.ImageButton;
+import android.widget.ImageView;
 import android.widget.TextView;
 
 import androidx.fragment.app.Fragment;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
-import com.google.firebase.auth.FirebaseAuth;
 import com.sphere.jobsphere.Candidate.Activities.CandidateHomeActivity;
 import com.sphere.jobsphere.Candidate.Adapters.CandidateHomeCategoryAdapter;
 import com.sphere.jobsphere.Candidate.Adapters.CandidateHomeRecentJobsAdapter;
 import com.sphere.jobsphere.Candidate.Adapters.CandidateHomeSuggestedJobsAdapter;
 import com.sphere.jobsphere.Candidate.Models.CandidateHomeCategoryModel;
 import com.sphere.jobsphere.Candidate.Models.CandidateJobModel;
-import com.sphere.jobsphere.Common.Activities.CommonLoginActivity;
 import com.sphere.jobsphere.R;
 
 import java.util.ArrayList;
@@ -41,7 +37,7 @@ public class CandidateHomeFragment extends Fragment {
     List<CandidateJobModel> recentJobs = new ArrayList<>();
     TextView tvCandidateHomeSeeAllSuggestedJobs, tvCandidateHomeSeeAllRecentJobs;
 
-    ImageButton ibCandidateHomeNotifications;
+    ImageView ibCandidateHomeNotifications;
 
     SharedPreferences pref;
     SharedPreferences.Editor editor;
@@ -71,169 +67,25 @@ public class CandidateHomeFragment extends Fragment {
         categories.add(new CandidateHomeCategoryModel(R.drawable.freelance, "Freelancer"));
 
 
-        suggestedJobs.add(new CandidateJobModel(
-                "1",
-                "Software Engineer",
-                "We are looking for a passionate Software Engineer to join our team.",
-                "Google",
-                "https://logo.clearbit.com/google.com",   // companyLogo URL
-                "Bangalore, India",
-                "Full-time",                             // jobType (optional, fallback)
+        suggestedJobs.add(new CandidateJobModel("1", "Software Engineer", "We are looking for a passionate Software Engineer to join our team.", "Google", "https://logo.clearbit.com/google.com",   // companyLogo URL
+                "Bangalore, India", "Full-time",                             // jobType (optional, fallback)
                 Arrays.asList("Full-time", "Remote"),    // jobTypes
-                "IT",
-                "Java, Kotlin, Firebase",
-                Arrays.asList("Java", "Kotlin", "Firebase"),
-                "₹20 LPA",
-                1800000.0,
-                2500000.0,
-                "Mid",
-                "B.Tech",
-                System.currentTimeMillis(),
-                System.currentTimeMillis() + 604800000,  // +7 days
-                "rec001",
-                "Alice Johnson",
-                "alice.hr@google.com",
-                25,
-                Arrays.asList("cand01", "cand02"),
-                92.5
-        ));
+                "IT", "Java, Kotlin, Firebase", Arrays.asList("Java", "Kotlin", "Firebase"), "₹20 LPA", 1800000.0, 2500000.0, "Mid", "B.Tech", System.currentTimeMillis(), System.currentTimeMillis() + 604800000,  // +7 days
+                "rec001", "Alice Johnson", "alice.hr@google.com", 25, Arrays.asList("cand01", "cand02"), 92.5));
 
-        suggestedJobs.add(new CandidateJobModel(
-                "3",
-                "Backend Developer",
-                "Work on scalable APIs and database systems for enterprise apps.",
-                "Amazon",
-                "https://logo.clearbit.com/amazon.com",
-                "Hyderabad, India",
-                "Part-time",
-                Arrays.asList("Part-time", "Remote"),
-                "Software Development",
-                "Node.js, Express, SQL",
-                Arrays.asList("Node.js", "Express", "MySQL"),
-                "₹12 LPA",
-                900000.0,
-                1500000.0,
-                "Junior",
-                "B.Sc / B.Tech",
-                System.currentTimeMillis(),
-                System.currentTimeMillis() + 2592000000L,  // +30 days
-                "rec003",
-                "Priya Sharma",
-                "priya.hr@amazon.com",
-                18,
-                Arrays.asList("cand08", "cand09", "cand10"),
-                78.0
-        ));
+        suggestedJobs.add(new CandidateJobModel("3", "Backend Developer", "Work on scalable APIs and database systems for enterprise apps.", "Amazon", "https://logo.clearbit.com/amazon.com", "Hyderabad, India", "Part-time", Arrays.asList("Part-time", "Remote"), "Software Development", "Node.js, Express, SQL", Arrays.asList("Node.js", "Express", "MySQL"), "₹12 LPA", 900000.0, 1500000.0, "Junior", "B.Sc / B.Tech", System.currentTimeMillis(), System.currentTimeMillis() + 2592000000L,  // +30 days
+                "rec003", "Priya Sharma", "priya.hr@amazon.com", 18, Arrays.asList("cand08", "cand09", "cand10"), 78.0));
 
 
-        suggestedJobs.add(new CandidateJobModel(
-                "2",
-                "UI/UX Designer",
-                "Design user-centric web and mobile app interfaces.",
-                "Adobe",
-                "https://logo.clearbit.com/adobe.com",
-                "Remote",
-                "Freelance",
-                List.of("Freelance"),
-                "Design",
-                "Figma, Photoshop",
-                Arrays.asList("Figma", "Photoshop"),
-                "$30/hr",
-                null,
-                null,
-                "Senior",
-                "Any design degree",
-                System.currentTimeMillis(),
-                System.currentTimeMillis() + 1209600000, // +14 days
-                "rec002",
-                "John Doe",
-                "john.hr@adobe.com",
-                12,
-                Arrays.asList("cand05", "cand07"),
-                85.0
-        ));
+        suggestedJobs.add(new CandidateJobModel("2", "UI/UX Designer", "Design user-centric web and mobile app interfaces.", "Adobe", "https://logo.clearbit.com/adobe.com", "Remote", "Freelance", List.of("Freelance"), "Design", "Figma, Photoshop", Arrays.asList("Figma", "Photoshop"), "$30/hr", null, null, "Senior", "Any design degree", System.currentTimeMillis(), System.currentTimeMillis() + 1209600000, // +14 days
+                "rec002", "John Doe", "john.hr@adobe.com", 12, Arrays.asList("cand05", "cand07"), 85.0));
 
 
-        recentJobs.add(new CandidateJobModel(
-                "101",
-                "Frontend Developer",
-                "Build responsive web UIs with ReactJS and Tailwind.",
-                "Google",
-                "https://logo.clearbit.com/google.com",
-                "Bengaluru, India",
-                "Full-time",
-                Arrays.asList("Full-time", "Remote"),
-                "Software Development",
-                "React, Redux, TailwindCSS",
-                Arrays.asList("React", "Redux", "Tailwind"),
-                "₹18 LPA",
-                12000.0,
-                18000.0,
-                "Mid-Level",
-                "B.Tech / M.Tech",
-                System.currentTimeMillis(),
-                System.currentTimeMillis() + 2592000000L,
-                "rec101",
-                "Rohit Mehta",
-                "rohit.hr@google.com",
-                30,
-                Arrays.asList("cand21", "cand22"),
-                85.0
-        ));
+        recentJobs.add(new CandidateJobModel("101", "Frontend Developer", "Build responsive web UIs with ReactJS and Tailwind.", "Google", "https://logo.clearbit.com/google.com", "Bengaluru, India", "Full-time", Arrays.asList("Full-time", "Remote"), "Software Development", "React, Redux, TailwindCSS", Arrays.asList("React", "Redux", "Tailwind"), "₹18 LPA", 12000.0, 18000.0, "Mid-Level", "B.Tech / M.Tech", System.currentTimeMillis(), System.currentTimeMillis() + 2592000000L, "rec101", "Rohit Mehta", "rohit.hr@google.com", 30, Arrays.asList("cand21", "cand22"), 85.0));
 
-        recentJobs.add(new CandidateJobModel(
-                "102",
-                "UI/UX Designer",
-                "Design intuitive mobile app experiences and prototypes.",
-                "Zomato",
-                "https://logo.clearbit.com/zomato.com",
-                "Gurgaon, India",
-                "Freelance",
-                Arrays.asList("Freelance", "Remote"),
-                "Design",
-                "Figma, Adobe XD",
-                Arrays.asList("Figma", "Adobe XD"),
-                "₹8 LPA",
-                50000.0,
-                90000.0,
-                "Junior",
-                "Any Design Degree",
-                System.currentTimeMillis(),
-                System.currentTimeMillis() + 2592000000L,
-                "rec102",
-                "Sneha Kapoor",
-                "sneha.hr@zomato.com",
-                10,
-                Arrays.asList("cand11", "cand12", "cand13"),
-                72.0
-        ));
+        recentJobs.add(new CandidateJobModel("102", "UI/UX Designer", "Design intuitive mobile app experiences and prototypes.", "Zomato", "https://logo.clearbit.com/zomato.com", "Gurgaon, India", "Freelance", Arrays.asList("Freelance", "Remote"), "Design", "Figma, Adobe XD", Arrays.asList("Figma", "Adobe XD"), "₹8 LPA", 50000.0, 90000.0, "Junior", "Any Design Degree", System.currentTimeMillis(), System.currentTimeMillis() + 2592000000L, "rec102", "Sneha Kapoor", "sneha.hr@zomato.com", 10, Arrays.asList("cand11", "cand12", "cand13"), 72.0));
 
-        recentJobs.add(new CandidateJobModel(
-                "103",
-                "Data Analyst",
-                "Analyze business data and create dashboards using PowerBI.",
-                "Flipkart",
-                "https://logo.clearbit.com/flipkart.com",
-                "Bengaluru, India",
-                "Part-time",
-                List.of("Part-time"),
-                "Data Analytics",
-                "SQL, Excel, PowerBI",
-                Arrays.asList("SQL", "PowerBI", "Excel"),
-                "₹10 LPA",
-                700000.0,
-                1200000.0,
-                "Entry-Level",
-                "B.Sc / BBA",
-                System.currentTimeMillis(),
-                System.currentTimeMillis() + 2592000000L,
-                "rec103",
-                "Karan Verma",
-                "karan.hr@flipkart.com",
-                22,
-                Arrays.asList("cand31", "cand32"),
-                69.0
-        ));
+        recentJobs.add(new CandidateJobModel("103", "Data Analyst", "Analyze business data and create dashboards using PowerBI.", "Flipkart", "https://logo.clearbit.com/flipkart.com", "Bengaluru, India", "Part-time", List.of("Part-time"), "Data Analytics", "SQL, Excel, PowerBI", Arrays.asList("SQL", "PowerBI", "Excel"), "₹10 LPA", 700000.0, 1200000.0, "Entry-Level", "B.Sc / BBA", System.currentTimeMillis(), System.currentTimeMillis() + 2592000000L, "rec103", "Karan Verma", "karan.hr@flipkart.com", 22, Arrays.asList("cand31", "cand32"), 69.0));
 
         CandidateHomeCategoryAdapter adapter = new CandidateHomeCategoryAdapter(categories, getActivity());
         candidateCategoriesRecycler.setAdapter(adapter);
@@ -265,13 +117,15 @@ public class CandidateHomeFragment extends Fragment {
         });
 
         ibCandidateHomeNotifications.setOnClickListener(v -> {
-            FirebaseAuth.getInstance().signOut();
-            editor.putBoolean("isLoggedIn", false).apply();
-            makeText(getActivity(), "Logged out Successfully."  , LENGTH_SHORT).show();
-            new Handler().postDelayed(() -> {
-                startActivity(new Intent(getActivity(), CommonLoginActivity.class));
-            }, 2000);
-
+//            FirebaseAuth.getInstance().signOut();
+//            editor.putBoolean("isLoggedIn", false).apply();
+//            Toast.makeText(getActivity(), "Logged out Successfully.", Toast.LENGTH_SHORT).show();
+//            new Handler().postDelayed(() -> {
+//                startActivity(new Intent(getActivity(), CommonLoginActivity.class));
+//            }, 2000);
+            
+            makeText(getActivity(), "Clicked...", LENGTH_SHORT).show();
+            
         });
 
         return view;
